src/test/deca/context/valid/class/field_same_name_superclass.deca
/// Description:
// 	  Test syntax when a field in a subclass has the same name as the superclass
// 	
// Resultats:
// 	  ok
// Historique:
// 	  cree le 19/01/2023

class A {
    int Object = 0;
}