src/test/deca/context/invalid/class/string_returntype.deca
/// Description:
// 	  Test syntax when returning a string inside a method
// 	
// Resultats:
// 	  UNDEFINED_TYPE: Type string is undefined
//    line 11
// Historique:
// 	  cree le 19/01/2023
class A {
    int x;
    string m() {
        return "hola";
    }
}